[package]
name = "playground-combine"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-combine"
documentation = "https://docs.rs/playground-combine"
description = "trying out the combine ll1 parser"
authors = ["yoshuawuyts <yoshuawuyts@gmail.com>"]

[dependencies]
combine = "3.0.0"

[dev-dependencies]
clippy = "0.0.189"
